novo endpoint para start do processamento

--- a/.env-example
+++ b/.env-example
@@ -10,5 +10,9 @@ AWS_REGION=bucket_region
 DB_NAME=signedurls
 DB_USER=postgres
 DB_PWD=1234567890
-DB_HOST=host
+DB_HOST=localhost
 DB_PORT=5432
+
+#SQS
+SQS_REGION=sa-east-1
+SQS_QUEUE_URL=url_sqs_test
