--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "main": "src/server.js",
   "dependencies": {
-    "express": "^4.18.2",
+    "@aws-sdk/client-sqs": "^3.787.0",
+    "@sequelize/postgres": "^7.0.0-alpha.46",
     "aws-sdk": "^2.1242.0",
-    "sequelize": "^6.29.3",
-    "pg": "^8.10.0",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "pg": "^8.10.0",
+    "sequelize": "^6.29.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
