--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@aws-sdk/client-sqs": "^3.787.0",
     "@sequelize/postgres": "^7.0.0-alpha.46",
     "aws-sdk": "^2.1242.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg": "^8.10.0",
