publish na fila

--- a/.env-example
+++ b/.env-example
@@ -1,11 +1,6 @@
 #APPLICATION
 PORT=3000
 
-#AWS
-AWS_ACCESS_KEY_ID=user_access_key
-AWS_SECRET_ACCESS_KEY=user_secret_access_key
-AWS_REGION=bucket_region
-
 #DB
 DB_NAME=signedurls
 DB_USER=postgres
@@ -13,6 +8,13 @@ DB_PWD=1234567890
 DB_HOST=localhost
 DB_PORT=5432
 
+# AWS
+AWS_ACCESS_KEY_ID=access_key
+AWS_SECRET_ACCESS_KEY=secret_key
+AWS_REGION=region
+
+#S3 BUCKET
+S3_BUCKET_NAME=name
+
 #SQS
-SQS_REGION=sa-east-1
-SQS_QUEUE_URL=url_sqs_test
+SQS_URL=url
