--- a/package.json
+++ b/package.json
@@ -3,22 +3,23 @@
   "version": "1.0.0",
   "main": "src/server.js",
   "dependencies": {
-    "@aws-sdk/client-sqs": "^3.787.0",
+    "@aws-sdk/client-sns": "^3.796.0",
     "@sequelize/postgres": "^7.0.0-alpha.46",
     "aws-sdk": "^2.1242.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "pg": "^8.10.0",
     "sequelize": "^6.29.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "jest": "^29.5.0",
+    "nodemon": "^3.1.10",
     "supertest": "^6.3.0"
   },
   "scripts": {
     "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "test": "jest"
   }
 }
