--- a/.env-example
+++ b/.env-example
@@ -1,20 +1,16 @@
-#APPLICATION
+# Aplicação
 PORT=3000
 
-#DB
-DB_NAME=signedurls
-DB_USER=postgres
-DB_PWD=1234567890
-DB_HOST=localhost
+# Banco de Dados
+DB_HOST=db
 DB_PORT=5432
+DB_NAME=signedurls
+DB_USER=user
+DB_PWD=password
 
 # AWS
-AWS_ACCESS_KEY_ID=access_key
-AWS_SECRET_ACCESS_KEY=secret_key
-AWS_REGION=region
-
-#S3 BUCKET
-S3_BUCKET_NAME=name
-
-#SQS
-SQS_URL=url
+AWS_ACCESS_KEY_ID=your-access-key-id
+AWS_SECRET_ACCESS_KEY=your-secret-access-key
+AWS_REGION=us-east-1
+S3_BUCKET_NAME=your-s3-bucket-name
+SQS_URL=https://sqs.us-east-1.amazonaws.com/000000000000/your-queue-name
