--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,39 @@
 version: '3.8'
+
 services:
   app:
     build: .
+    container_name: signed-url-service
     ports:
-      - "3000:3000"
-    environment:
-      - PORT=3000
-      - DB_URL=postgres://user:password@db:5432/signedurls
+      - "${PORT:-3000}:3000"
     depends_on:
       - db
+    env_file:
+      - .env
+    environment:
+      PORT: ${PORT}
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      DB_NAME: ${DB_NAME}
+      DB_USER: ${DB_USER}
+      DB_PWD: ${DB_PWD}
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+      AWS_REGION: ${AWS_REGION}
+      S3_BUCKET_NAME: ${S3_BUCKET_NAME}
+      SQS_URL: ${SQS_URL}
 
   db:
     image: postgres:13
-    environment:
-      - POSTGRES_USER=user
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=signedurls
+    container_name: signed-url-db
     ports:
       - "5432:5432"
+    environment:
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PWD}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
